@@ -5,7 +5,7 @@
 	<artifactId>commons-jvm</artifactId>
 	<name>ERI Commons - JVM Extensions</name>
 	<description>Shared JVM language extensions</description>
-	<version>2.2.1-SNAPSHOT</version>
+	<version>2.2.1</version>
 	<inceptionYear>2014</inceptionYear>
 	
 	<organization>
@@ -103,10 +103,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<systemProperties>
-						<!-- See https://javachannel.org/posts/help-my-java-locale-is-wrong-in-jdk11/ -->
-						<java.locale.providers>COMPAT,CLDR</java.locale.providers>
-					</systemProperties>
+					<!-- See https://javachannel.org/posts/help-my-java-locale-is-wrong-in-jdk11/ -->
+					<argLine>-Djava.locale.providers=COMPAT,CLDR</argLine>
 				</configuration>
 			</plugin>
     	</plugins>
